# walpsel

./: Cargo.toml  LICENSE
src/: main.rs  settings.rs  wallpaper_engine.rs  walpsel_app.rs
