[package]
name = "walpsel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "~0.26.2"
eframe = { version = "~0.26.2", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "glow",
] }
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for
yaml-rust2 = "0.6"

